syntax = "proto3";
package danieljdd.tpp.tpp;


import "gogoproto/gogo.proto";
//import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/danieljdd/tpp/x/tpp/types";


//message Buyer {
 // string buyer = 1;

 // string itemid = 2; 

  //cosmos.base.v1beta1.Coin deposit = 3 [
//    (gogoproto.nullable) = false]; 
//}

message MsgCreateBuyer {
  string buyer = 1;
  string itemid = 2;
  int64 deposit = 3;
}

message MsgUpdateBuyer {
  string buyer = 1;
  string itemid = 2; 
  int64 deposit = 3; 
}

message MsgDeleteBuyer {
  string buyer = 1;
  string itemid = 2;
}

message MsgItemTransfer{
  string buyer = 1;
  string itemid = 2;

}

message MsgItemRating{
  string buyer = 1;
  string itemid = 2;
  int64 rating = 3;
  string note = 4;
}
